--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,12 @@
 @tailwind utilities;
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-html,
-body {
-  width: 100%;
-  height: 100%;
   font-family: "Poppins", sans-serif;
 }
 ::selection {
   background-color: #ca7a7a;
   color: #000;
+}
+.break {
+  display: none;
 }
